--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -4,11 +4,9 @@ name: Build Windows EXE
 on:
   workflow_dispatch:     # 수동 실행
   push:
-    branches:
-      - main
+    branches: [ main ]
   pull_request:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
   build-windows:
@@ -16,17 +14,14 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      # 1) 코드 체크아웃
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      # 2) Python 설정
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.12"
 
-      # 3) 캐시된 pip dependencies
       - name: Cache pip
         uses: actions/cache@v3
         with:
@@ -35,27 +30,28 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pip-
 
-      # 4) 의존성 설치
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install pyinstaller
 
-      # 5) EXE 빌드
+      - name: Clean build folders
+        run: |
+          rmdir /S /Q build  || echo no build folder
+          rmdir /S /Q dist   || echo no dist folder
+
       - name: Build EXE with PyInstaller
         run: |
           pyinstaller \
             --onefile \
             --name mh-bills \
-            --add-data "config.ini;." \
             --workpath build \
             --distpath dist \
             main.py
 
-      # 6) 빌드 결과 업로드
       - name: Upload EXE artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: mh-bills-windows
           path: dist/mh-bills.exe
