--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -43,12 +43,13 @@ jobs:
           if (Test-Path dist)   { Remove-Item dist  -Recurse -Force }
 
       - name: Build EXE with PyInstaller
+        shell: pwsh
         run: |
-          pyinstaller \
-            --onefile \
-            --name mh-bills \
-            --workpath build \
-            --distpath dist \
+          pyinstaller `
+            --onefile `
+            --name mh-bills `
+            --workpath build `
+            --distpath dist `
             main.py
 
       - name: Upload EXE artifact
